<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerRegLoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginLeft="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/customerEmail"
        android:layout_below="@+id/statusCustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/customerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/customerEmail"
        android:ems="10"
        android:hint="@string/password"
        android:layout_marginTop="30dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signInCustomer"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/customerPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/yellow"
        android:text="@string/signIn"
        android:textSize="20sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/signUpCustomer"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/signInCustomer"
        android:background="@color/yellow"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="@string/signUp"  />

    <TextView
        android:id="@+id/statusCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Вход для клиентов"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/accountCreateCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signInCustomer"
        android:layout_marginTop="5dp"
        android:text="@string/createQuestion" />



</RelativeLayout>